[package]
name = "camtrap_dp"
version = "0.1.0"
edition = "2021"
description = "CamTrap DP Interface"
documentation = "https://github.com/bencevans/camtrap-dp-rs#readme"
license = "MIT"
repository = "https://github.com/bencevans/camtrap-dp-rs"
readme = "README.md"
homepage = "https://github.com/bencevans/camtrap-dp-rs"
keywords = ["camtrap", "dp", "data", "package", "interface", "camera", "trap"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
